# grove

./: .gitignore  .goreleaser.yml  .npmignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  go.mod  go.sum  jest.config.js  main.go  package-lock.json  package.json  tsconfig.json
.agents/: SKILL.md
.agents/skills/generate-changelog/: SKILL.md
.github/workflows/: build.yml  ci.yml  pages.yml  pr-publish.yml  release.yml
.warp/skills/grove/: SKILL.md
cmd/: init.go  list.go  prune.go  root.go  version.go
internal/git/: time_darwin.go  time_linux.go  time_other.go  time_windows.go  worktree.go
internal/models/: worktree.go
site/: index.html  install.ps1  install.sh
src/: index.ts  main.rs  models.rs  utils.rs
src/commands/: add.rs  add.ts  go.rs  go.ts  init.rs  init.ts  list.rs  list.ts  mod.rs  pr.rs  pr.ts  prune.rs  prune.ts  remove.rs  remove.ts  self-update.ts  self_update.rs  shell-init.ts  shell_init.rs  sync.rs  sync.ts  worktree-picker.ts
src/git/: WorktreeManager.ts  mod.rs  worktree_manager.rs
src/models/: index.ts
src/utils/: index.ts
test/: WorktreeManager.test.ts
test/integration/: WorktreeManager.integration.test.ts  grove.hone  workflow.hone
test/unit/: WorktreeManager.edge-cases.test.ts  WorktreeManager.test.ts  add.test.ts  cli.test.ts  utils.test.ts
